static/css/cssv.css
/* ... */
.header {
    display: flex;
    justify-content: space-around;
    height: auto;
    width: 100%;
  }
  
.headerCol1 {
    margin: 40px 0;
}
  
  .headerCol2 {
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    margin: 40px 0;
  }

.hero {
    width: 100%;
    background-color: #f2f2f2;
    background-repeat: repeat;
    background-size: cover;
    background-position: 50% 50%;
    height: 64.5vh;
    width: 100vw;
    text-align: center;
    vertical-align: middle;
    background-image: url(/img/vherobg.jpg);
    background-size: cover;
    margin-top: -214px
}

.heroText {
    font-size: 48px;
    font-family: 'Open Sans Condensed', sans-serif;
    font-weight: 700;
    letter-spacing: 2px;
    padding-left: 10%;
    padding-right: 10%;
    position: absolute;
    top: 30%;
    margin: 0 auto;
    left: 0;
    right: 0
}

.heroText2 {
    font-size: 45px;
    font-family: 'Open Sans Condensed', sans-serif;
    font-weight: 700;
    letter-spacing: 2px;
    padding-left: 10%;
    padding-right: 10%;
    position: absolute;
    top: 33%;
    margin: 0 auto;
    left: 0;
    right: 0;
    display: inline;
    margin-left: -15%;
}

.logo {
    width: 127px;
    height: 130px;
  }
  
  .social-header {
      margin-top: 20px;
  }
  
  .blog {
      text-decoration: none;
      font-family: 'Open Sans Condensed', sans-serif;
      font-size: 1.2rem;
      font-weight: 700;
      letter-spacing: 2px;
      color: black;
  }
  
  .fb {
      height: 18.75px;
      margin-right: 20px;
  }
  
  .insta {
      height: 18.75px;
      margin-right: 20px;
  }
  
  .twitter {
      margin-right: 20px;
      height: 18.75px;
  }
  
  .pin {
    height: 18.75px;
}

.arrow {
    width: 23px;
    height: 15px;
    position: absolute;
    bottom: 40%;
    left: 0;
    right: 0;
    margin: 0 auto;
}

.heroD{
    width: 100%;
    background-color: #f2f2f2;
    background-repeat: repeat;
    background-size: cover;
    background-position: 50% 50%;
    width:100%;
    text-align: center;
    vertical-align: middle;
    background-image: url(/img/vherobg.jpg);
    background-size: cover;
    background-size: cover;
    margin-top: -214px;
    padding-bottom: 125px;
    z-index: 99999;
    padding-top: 247px;
}

.headerTextD{
    font-size:45px;
    font-family: 'Open Sans Condensed', sans-serif;
    font-weight:700;
    letter-spacing:2px;
    padding-left:10%;
    padding-right:10%;
}

.introTextD{
    font-family: 'Open Sans', sans-serif;
    padding-left:20%;
    padding-right:20%;
    font-size:16px;
    letter-spacing:2px;
    font-weight:300;
    line-height:40px;
}

#intro {
    width: 100%;
    padding-top: 90px;
    padding-bottom: 90px;
    text-align: center
}

.introText {
    font-family: 'Open Sans', sans-serif;
    padding-left: 20%;
    padding-right: 20%;
    font-size: 20px;
    letter-spacing: 2px;
    font-weight: 300;
    line-height: 40px;
}

.blockMain {
    width: 70%;
    margin: 0 auto;
    text-align: left;
    padding-left: 60px;
    padding-right: 60px;
    padding-bottom: 60px;
    background: url(/img/vbackground.jpg);
    background-position: right;
    background-repeat: no-repeat;
    background-size: contain;
    padding-top: 60px
}

.blockText {
    font-size: 36px;
    font-family: 'Open Sans Condensed', sans-serif;
    font-weight: 700;
    letter-spacing: 2px;
    margin-bottom: 20px;
    background-color: rgba(255, 255, 255, .9);
    display: inline-block
}

.blockLine {
    width: 35px;
    height: 2px;
    background-color: #000;
    margin-bottom: 60px
}

.blockLine2 {
    width: 35px;
    height: 2px;
    background-color: #000;
    margin-bottom: 60px;
    margin: 0 auto
}

.triBlock {
    display: table;
    height: auto;
    position: relative;
    width: 100%;
    margin: 0 auto
}

.triBlockCol1 {
    display: table-cell;
    width: 33.3%;
    padding-top: 40px;
    padding-bottom: 70px;
    padding-left: 40px;
    padding-right: 40px;
    vertical-align: top;
    text-align: left;
    background-color: rgba(241, 241, 241, .95);
    border-right: 14px solid #fff;
    background-image: url(/img/vline.jpg);
    background-position: bottom;
    background-repeat: repeat-x
}

.triBlockCol2 {
    border-left: 7px solid #fff;
    border-right: 7px solid #fff;
    display: table-cell;
    width: 33.3%;
    padding-top: 40px;
    padding-bottom: 70px;
    padding-left: 40px;
    padding-right: 40px;
    vertical-align: top;
    text-align: left;
    background-color: rgba(241, 241, 241, .95);
    background-image: url(/img/vline.jpg);
    background-position: bottom;
    background-repeat: repeat-x
}

.triBlockCol3 {
    display: table-cell;
    width: 33.3%;
    padding-top: 40px;
    padding-bottom: 70px;
    padding-left: 40px;
    padding-right: 40px;
    vertical-align: top;
    text-align: left;
    border-left: 14px solid #fff;
    background-color: rgba(241, 241, 241, .95);
    background-image: url(/img/vline.jpg);
    background-position: bottom;
    background-repeat: repeat-x
}

.number {
    padding: 7.5px;
    background-color: #000;
    font-size: 16px;
    font-family: 'Open Sans Condensed', sans-serif;
    font-weight: 700;
    letter-spacing: 2px;
    text-align: center;
    height: 20px;
    width: 20px;
    color: #fff
}

.triTitle {
    font-family: 'Open Sans', sans-serif;
    font-size: 16px;
    letter-spacing: 2px;
    margin-top: 15px;
    margin-bottom: 15px;
    font-weight: 700
}

.triText {
    font-family: 'Open Sans', sans-serif;
    font-size: 18px;
    letter-spacing: 2px;
    font-weight: 300;
    line-height: 30px
}

.whatBox {
    width: 100%;
    padding-bottom: 60px;
    text-align: center;
    margin-top: 60px
}

.whatBoxRow {
    display: table;
    height: auto;
    position: relative;
    width: 70%;
    margin: 0 auto;
    margin-top: 60px
}

.whatBoxCol1 {
    display: table-cell;
    width: 220px;
    vertical-align: TOP;
    text-align: left
}
/* ... */

